2011-03-17  Dan Bernstein  <mitz@apple.com>

        Reviewed by Beth Dakin.

        <rdar://problem/9052166> Emphasis marks appear over combined text rather than beside it
        https://bugs.webkit.org/show_bug.cgi?id=56480

        Test: fast/text/emphasis-combined-text.html

        * rendering/InlineTextBox.cpp:
        (WebCore::rotation): Added this helper.
        (WebCore::InlineTextBox::paint): Paint a single emphasis mark beside the combined text,
        centered vertically.

2011-03-17  Jian Li  <jianli@chromium.org>

        Reviewed by Adam Barth.

        Blob URL should not be allow to get created from the code running from data URI
        https://bugs.webkit.org/show_bug.cgi?id=56600

        Test: http/tests/fileapi/create-blob-url-from-data-url.html

        * dom/ScriptExecutionContext.cpp:
        (WebCore::ScriptExecutionContext::createPublicBlobURL):
        * fileapi/BlobURL.cpp:
        (WebCore::BlobURL::createBlobURL):
        * fileapi/EntryBase.cpp:
        (WebCore::EntryBase::toURI):
        * fileapi/FileReaderLoader.cpp:
        (WebCore::FileReaderLoader::start):

2011-03-17  Jeff Miller  <jeffm@apple.com>

        Use a consistent set of file patterns in the svn:ignore property for all .xcodeproj directories, specifically:
        
        *.mode*
        *.pbxuser
        *.perspective*
        project.xcworkspace
        xcuserdata

        * WebCore.xcodeproj: Modified property svn:ignore.
        * manual-tests/NPN_Invoke/NPN_Invoke.xcodeproj: Modified property svn:ignore.

2011-03-17  Sam Weinig  <sam@webkit.org>

        Fix Mac build.

        * WebCore.exp.in:
        Add missing symbol.

2011-03-17  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Adele Peterson and Enrica Casucci.

        Assert that editing does not ignore position's anchorNode if position is an offset in anchor
        https://bugs.webkit.org/show_bug.cgi?id=56027

        Debug build fix.

        * dom/Element.cpp: